syntax = "proto3";

package baton.v1;

option go_package = "github.com/conductorone/baton/pb/baton_cli/v1";

import "google/protobuf/timestamp.proto";
import "c1/connector/v2/resource.proto";
import "c1/connector/v2/entitlement.proto";
import "c1/connector/v2/grant.proto";

message ResourceDiff {
  repeated c1.connector.v2.Resource created = 1;
  repeated c1.connector.v2.Resource deleted = 2;
  repeated c1.connector.v2.Resource modified = 3;
}

message EntitlementDiff {
  repeated c1.connector.v2.Entitlement created = 1;
  repeated c1.connector.v2.Entitlement deleted = 2;
  repeated c1.connector.v2.Entitlement modified = 3;
}

message GrantDiff {
  repeated c1.connector.v2.Grant created = 1;
  repeated c1.connector.v2.Grant deleted = 2;
  repeated c1.connector.v2.Grant modified = 3;
}

message C1ZDiffOutput {
  ResourceDiff resources = 1;
  EntitlementDiff entitlements = 2;
  GrantDiff grants = 3;
}

message ResourceTypeOutput {
  c1.connector.v2.ResourceType resource_type = 1;
}

message ResourceOutput {
  c1.connector.v2.Resource resource = 1;
  c1.connector.v2.ResourceType resource_type = 2;
  c1.connector.v2.Resource parent = 3;
}

message EntitlementOutput {
  c1.connector.v2.Entitlement entitlement = 1;
  c1.connector.v2.Resource resource = 2;
  c1.connector.v2.ResourceType resource_type = 3;
}

message GrantOutput {
  c1.connector.v2.Grant grant = 1;
  c1.connector.v2.Entitlement entitlement = 2;
  c1.connector.v2.Resource resource = 3;
  c1.connector.v2.ResourceType resource_type = 4;
  c1.connector.v2.Resource principal = 5;
}

message ResourceAccessOutput {
  c1.connector.v2.ResourceType resource_type = 1;
  c1.connector.v2.Resource resource = 2;
  repeated c1.connector.v2.Entitlement entitlements = 3;
}

message ResourceTypeListOutput {
  repeated ResourceTypeOutput resource_types = 1;
}

message ResourceListOutput {
  repeated ResourceOutput resources = 1;
}

message EntitlementListOutput {
  repeated EntitlementOutput entitlements = 1;
}

message GrantListOutput {
  repeated GrantOutput grants = 1;
}

message ResourceAccessListOutput {
  c1.connector.v2.Resource principal = 1;
  repeated ResourceAccessOutput access = 2;
}

message PrincipalsCompareOutput {
  repeated ResourceOutput missing = 1;
  repeated ResourceOutput extra = 2;
  repeated ResourceOutput base = 3;
  repeated ResourceOutput compared = 4;
}

message SyncOutput {
  string id = 1;
  google.protobuf.Timestamp started_at = 2;
  google.protobuf.Timestamp ended_at = 3;
  string sync_token = 4;
}

message SyncListOutput {
  repeated SyncOutput syncs = 1;
}